# realraum-frontend

./: Cargo.toml  README.md  Trunk.toml  cloudflare-build.sh  index.html  rust-toolchain.toml
.github/: CODEOWNERS
data/: licht.realraum.at.html
src/: core.rs  license_notice.rs  main.rs  projector_commands.rs
src/app/: mod.rs  projector.rs  sound_button.rs  sounds.rs  url_button.rs
src/styles/: main.css
