[package]
name = "realraum_ui"
version = "0.0.0"
edition = "2021"
authors = ["Tanja <rust@tanja.pw>"]
description = "A frontend for Realraum"
documentation = "https://docs.rs/realraum_ui/latest/realraum_ui/"
homepage = "https://github.com/realraum/realraum-frontend#readme"
repository = "https://github.com/realraum/realraum-frontend"
license = "AGPL-3.0-or-later"
# keywords = []
# categories = []
include = ["/src", "/Cargo.toml", "/README.md", "/LICENSE.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-storage = "0.2.2"
leptos = "0.3.1"
leptos_router = { version = "0.3.1", features = ["csr"] }
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive", "rc"] }
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
gix-hash = "0.11.1"
gix-refspec = "0.13.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
regex = "1.9.3"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
gloo-net = { version = "0.3.1", features = ["http"] }
reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
